<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_cashproviderLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_cashprovider_img" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tl_topTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TableRow
            android:background="@color/purple_200"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:text="@string/date_header"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:text="@string/title_header"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:text="@string/amount_header"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </TableRow>

        <ScrollView android:layout_width="match_parent"
            android:layout_height="250dp">

            <TableLayout
                android:id="@+id/tl_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"></TableLayout>

        </ScrollView>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/total" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_outcome"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:text="@string/outcome" />

        <Button
            android:id="@+id/btn_income"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:text="@string/income" />
    </LinearLayout>


</LinearLayout>